eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: self-introduction-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: self-introduction
