eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: self-introduction-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "machearn.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: self-introduction-service
            port:
              number: 80

  - host: "www.machearn.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: self-introduction-service
            port:
              number: 80

  - host: "profile.machearn.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: self-introduction-service
            port:
              number: 80
